--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -26,9 +26,21 @@
       </div>
     {% endif %}
 
+  #  <h2 class="archive__item-title" itemprop="headline">
+  #    {% if post.link %}
+  #      <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+  #    {% else %}
+  #      <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+  #    {% endif %}
+  #  </h2>
+    
     <h2 class="archive__item-title" itemprop="headline">
-      {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+      {% if post.siteurl %}
+        <a href="{{ post.siteurl }}" target="_blank">{{ title }}</a>
+      {% elsif post.paperurl %}
+        <a href="{{ post.paperurl }}" target="_blank">{{ title }}</a>
+      {% elsif post.link %}
+        <a href="{{ post.link }}" target="_blank">{{ title }}</a>
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
