--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,3 +29,5 @@ layout: compress
 
   </body>
 </html>
+
+<body class="{% if page.title == 'Publications' %}page-publications{% else %}page-default{% endif %}">
