--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,4 +30,4 @@ layout: compress
   </body>
 </html>
 
-<body class="{% if page.title == 'Publications' %}page-publications{% else %}page-default{% endif %}">
+<body class="{% if page.collection == 'publications' %}page-publications{% else %}page-default{% endif %}">
